<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/homestay"
        android:title="@string/item_1"
        app:showAsAction="ifRoom"
       />
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/search2"
        android:title="@string/item_2"
        app:showAsAction="ifRoom"
        />
        <item
            android:id="@+id/action_item3"
            android:icon="@drawable/announcement"
            android:title="@string/item_3" />
        <item
        android:id="@+id/action_item4"
        android:icon="@drawable/content"
        android:title="@string/item_4" />
    </menu>